--- a/1_Dasatinib_Pathway_Analysis.Rmd
+++ b/1_Dasatinib_Pathway_Analysis.Rmd
@@ -454,7 +454,7 @@ goseqPathways$DEgenesInCat <- genesStick
 goseqPathways <- lapply(goseqPathways, gsub, pattern='/', replacement=' ') %>% as.data.frame()
 goseqPathways$Pathway <- lapply(goseqPathways$Pathway, gsub, pattern=':', replacement='-')
 
-# Gives a table with which to identify the genes involved in each pathway, and saves it.
+# Gives a table with which to identify the genes involved in each pathway, and saves it - despite the name, siggoseq pathways does not filter for significance, it simply makes it easier to plot data.
 SiggenesStick <- lapply(SigsymbolsinPaths, function(x) paste0(x, collapse="::", sep="")) %>% unlist()
 SiggoseqPathways$DEgenesInCat <- SiggenesStick
 SiggoseqPathways <- lapply(SiggoseqPathways, gsub, pattern='/', replacement=' ') %>% as.data.frame()
@@ -564,4 +564,45 @@ heatmap.2(sigPathCor, scale='none', trace='none', col=cols, key=TRUE,
 #     dev.off()
 #   }
 # }
+```
+
+### Run negative control to ensure that enriched pathways aren't just showing up by chance.
+* 	Pick a random set of genes and do pathway analysis - do this 100-1000 times, hopefully 1000
+	Pull out P values, save them. Make a distribution of the smallest p value each repeat, and compare to the original pathway p-value. Do the same comparing all the second smallest etc.
+	Process:
+	Filter out genes that aren't in reactome, then randomly sample from reactome genes an equal number to your original gene list.
+	# Random sample genes,
+	# Then test for pathway associations,
+	Then chuck them in a list,
+	Then plot 1st all together, 2nd all together.
+	Check how many of each 1st are smaller than original.
+```{r}
+# Create a list in which to keep the adj. P values of 1000 repeats of this
+adjP.c <- list()
+
+for(t in 1:1000){
+
+# Create a random vector of 1395 genes (the same number as in plotGenes) to be called as significant for negative controls.
+ctrlGenes <- sample(allGenes, size = 1395, replace = F)
+# Create plotGenes.c, defining "DE" and "not DE" genes for negative controls.
+plotGenes.c <- rep(0, length(allGenes))
+names(plotGenes.c) <- allGenes
+plotGenes.c[match(ctrlGenes, names(plotGenes.c))] <- 1
+
+# Carries out the goseq analysis. rGeneByPath should be defined earlier and should be identical here.
+pwf.c <- nullp(plotGenes.c, 'hg19', id = "knownGene", plot.fit = TRUE)
+goseqReactome.c <- goseq(pwf.c, gene2cat = rGeneByPath)
+goseqReactome.c$adjP <- p.adjust(goseqReactome.c$over_represented_pvalue, method = "fdr")
+
+
+adjP.c[[t]] <- goseqReactome.c$adjP
+}
+
+
+# Add pathway information - probably unneccesary for this basic comparison, but can be used inside the loop
+goseqPathways.c <- goseqReactome.c
+rPathName <- as.list(reactomePATHID2NAME)
+goseqPathways.c$Pathway <- gsub("Homo sapiens: ", "", rPathName[match(goseqPathways.c$category, names(rPathName))])
+goseqPathways.c[,2:6] <- round(as.numeric(unlist(goseqPathways.c[,2:6])), digits=4)
+SiggoseqPathways.c <- goseqPathways.c
 ```
