--- a/1_Dasatinib_Pathway_Analysis.Rmd
+++ b/1_Dasatinib_Pathway_Analysis.Rmd
@@ -64,75 +64,124 @@ library(knitr)
 library(kableExtra)
 library(devtools)
 library(viridis)
+library(openxlsx)
 set.seed(42)
 ```
 
-### Load data
+### Load CCLE gene expression data
 ```{r, results='hide'}
-# Loads in Entrez ID's from the human genome.
+# Load Homo sapiens gene data (including Entrez ID's).
 hs <- org.Hs.eg.db
 
-# Loads expression data from the CCLE, and normalises it with "voom".
-ccleExpData <- read.gct('Data/CCLE_RNAseq_genes_counts_20180929.gct')
-# Remove X's from cell lines that start with a number.
-colnames(ccleExpData) <- sub("^X", "", colnames(ccleExpData))
+# Load expression data from the CCLE, available here: https://depmap.org/portal/data_page/?tab=allData
+CCLE <- read.gct('Data/CCLE_RNAseq_genes_counts_20180929.gct')
+# Remove X's introduced by R for cell lines that start with a number, but not those that don't.
+colnames(CCLE) <- sub("^X(\\d+)", "\\1", colnames(CCLE))
 
-logExpDat <- log(ccleExpData + 0.5)
-dge <- DGEList(counts=ccleExpData)
+# Normalise CCLE counts using the limma voom method.
+dge <- DGEList(counts = CCLE)
 dge <- calcNormFactors(dge)
-dge_voom <- voom(dge, plot=TRUE)
-expDat <- dge_voom$E
-expDatsplit <- expDat
+voom_dge <- voom(dge, plot = TRUE)
+voom_CCLE <- voom_dge$E
 
-# Loads the GDSC dataset, and filters for cell lines that have data for dasatinib.
+# Tidy up the environment.
+rm(list = c("dge", "voom_dge"))
+```
+
+### Load GDSC2 drug response data
+```{r}
+# Load the GDSC dataset, current release available here: www.cancerrxgene.org/downloads/bulk_download
+# Archived releases available via ftp: ftp.sanger.ac.uk/project/cancerrxgene/releases/
 GDSC2 <- fread("Data/GDSC2_fitted_dose_response_25Feb20.csv", sep= ';')
-dim(GDSC2)
-dasatinib <- GDSC2 %>% filter(., DRUG_NAME=="Dasatinib")
-colnames(expDat) <- strsplit(colnames(expDat), "_") %>% 
+
+# Load the GDSC dataset, current release available here: www.cancerrxgene.org/downloads/bulk_download
+# Archived releases available via ftp: ftp.sanger.ac.uk/project/cancerrxgene/releases/
+# GDSC2 <- read.xlsx("Data/GDSC2_fitted_dose_response_27Oct23.xlsx")
+
+# Filter for cell lines that have data for the drug "Dasatinib".
+dasatinib_GDSC2 <- filter(GDSC2, DRUG_NAME == "Dasatinib")
+```
+
+# Format data
+```{r}
+# Standardize CCLE and GDSC2 cell line names, resolving a naming discrepancy between between cellosaurus cell lines www.cellosaurus.org/CVCL_3174 and www.cellosaurus.org/CVCL_1774.
+# CCLE:
+colnames(voom_CCLE)[colnames(voom_CCLE) == "TT_OESOPHAGUS"] <- "T-T_OESOPHAGUS"
+# Isolate cell line and tissue labels for later indexing.
+split_cell_line_tissues <- colnames(voom_CCLE) %>% strsplit(., "_")
+colnames(voom_CCLE) <- strsplit(colnames(voom_CCLE), "_") %>% 
   lapply(., function(x) x[1]) %>% 
   unlist()
+# GDSC2:
+dasatinib_GDSC2$CELL_LINE_NAME <- ifelse(
+  dasatinib_GDSC2$CELL_LINE_NAME == "T-T", "T-T", # if
+  gsub("-", "", dasatinib_GDSC2$CELL_LINE_NAME, fixed = TRUE) # else
+)
 
-# Filters for cell lines that are shared between the GDSC and CCLE datasets.
-dasatinib$CELL_LINE_NAME <- gsub("-","",dasatinib$CELL_LINE_NAME, fixed = TRUE)
-commonSamples <- intersect(dasatinib$CELL_LINE_NAME,colnames(expDat))
-expDat_match <- match(commonSamples, colnames(expDat))
-expDat_sort <- expDat[ , na.omit(expDat_match)]
-dasatinib_match <- match(commonSamples, dasatinib$CELL_LINE_NAME)
-dasatinib_sort <- dasatinib[na.omit(dasatinib_match),]
-colnames(dasatinib_sort)[5] <- "CCLE_Name"
+# Filter datasets for common cell lines.
+common_lines <- intersect(dasatinib_GDSC2$CELL_LINE_NAME,colnames(voom_CCLE))
+match_voom_CCLE <- match(common_lines, colnames(voom_CCLE))
+common_voom_CCLE <- voom_CCLE[ , na.omit(match_voom_CCLE)]
+match_dasatinib_GDSC2 <- match(common_lines, dasatinib_GDSC2$CELL_LINE_NAME)
+common_dasatinib_GDSC2 <- dasatinib_GDSC2[na.omit(match_dasatinib_GDSC2),]
+colnames(common_dasatinib_GDSC2)[5] <- "CCLE_Name"
 
-# Filters dasatinib data for the two tissues of interest, and removes the middle 33% of samples (based on AUC), so that we're only looking at the extremes. Then filters "expDat_sort" so it's also only these cell lines, those that have data for the drug of interest, and CDH1 expression data.
-dasatinib_sort <- dasatinib_sort %>% filter(., TCGA_DESC == "BRCA" | TCGA_DESC == "STAD")  
-dasatinib_sort <- dasatinib_sort[ dasatinib_sort$AUC < quantile(dasatinib_sort$AUC , 0.33) | dasatinib_sort$AUC > quantile(dasatinib_sort$AUC, 0.66), ]
-dasatinib_sort$CDH1 <- expDat_sort %>% as.data.frame() %>% dplyr::select(., which(colnames(.) %in% dasatinib_sort$CCLE_Name)) %>%  .["ENSG00000039068.14",] %>% as.vector() %>% t()
-expDat_sort <- expDat_sort %>% subset(., select=which(colnames(expDat_sort) %in% dasatinib_sort$CCLE_Name))
-# Down to 37 cell lines.
+# Tidy up the environment.
+rm(list = c("common_lines", "match_voom_CCLE", "match_dasatinib_GDSC2"))
+```
 
-# Creates a tool for determining tissue type based on cell line identifier, or vice versa. Two versions are created, one for all tissues, the other for the three of interest (and specifically samples with expression data).
-lng <- length(colnames(expDatsplit))
-tissuetool <-data.frame(Cell_Line = character(lng),Tissue_Type = character(lng))
-tissuetool$Cell_Line <- strsplit(colnames(expDatsplit), "_") %>% 
-  lapply(., function(x) x[1]) %>% 
-  unlist()
-tissuetool$Tissue_Type <- strsplit(colnames(expDatsplit), "_") %>% 
-  lapply(., function(x) x[-1])%>%
-  paste(., sep="_", collapse = NULL) %>% 
-  unlist()
-tissuetool$Tissue_Type <- gsub('c', '', tissuetool$Tissue_Type)
-tissuetool$Tissue_Type <- gsub('[[:punct:]]', '', tissuetool$Tissue_Type)
-tissuetool$Tissue_Type <- gsub(' ', '_', tissuetool$Tissue_Type)
-tissuetoolsort <- filter(tissuetool, Tissue_Type=="BREAST" | Tissue_Type=="STOMACH")
+# Filter data
+```{r}
+# Filter CCLE and GDSC2 data for BRCA and STAD cell lines with data for dasatinib.
+# GDSC (also adds a column for CDH1 expression data):
+sort_dasatinib_GDSC2 <- common_dasatinib_GDSC2 %>%
+  filter(TCGA_DESC %in% c("BRCA", "STAD")) %>%
+  filter(AUC < quantile(AUC, 0.33) | AUC > quantile(AUC, 0.66))
+sort_dasatinib_GDSC2$CDH1 <- common_voom_CCLE %>% as.data.frame() %>%
+  dplyr::select(any_of(sort_dasatinib_GDSC2$CCLE_Name)) %>%
+  dplyr::slice(match("ENSG00000039068.14", rownames(.))) %>%
+  as.vector() %>%
+  t()
 
-int <- intersect(colnames(expDat_sort), tissuetoolsort$Cell_Line)
-tissuetool_match <- match(int, tissuetoolsort$Cell_Line)
-tissuetoolsort <- tissuetoolsort[na.omit(tissuetool_match) , ]
+# CCLE:
+sort_voom_CCLE <- common_voom_CCLE %>%
+  as.data.frame() %>%
+  dplyr::select(any_of(sort_dasatinib_GDSC2$CCLE_Name)) %>% 
+  as.matrix()
+
+# Tidy up the environment.
+rm(list = c("common_voom_CCLE", "common_dasatinib_GDSC2"))
+```
+
+# Index cell lines to tissues
+```{r}
+# Create a tool to find tissue type based on cell line name or vice versa.
+tissue_tool <- data.frame(
+  Cell_Line = sapply(split_cell_line_tissues, `[[`, 1),
+  Tissue_Type = sapply(split_cell_line_tissues, function(x) paste(x[-1], collapse = "_")),
+  stringsAsFactors = FALSE)
+tissue_tool <- tissue_tool %>% mutate(
+    Tissue_Type = Tissue_Type %>%
+      str_remove_all("c") %>%
+      str_replace_all("[[:punct:]]", "_"))
+
+# Create another tool for the same purpose, but only including cell lines of interest.
+sort_tissue_tool <- tissue_tool %>% filter(Tissue_Type %in% c("BREAST", "STOMACH"))
+common_lines <- intersect(colnames(sort_voom_CCLE), sort_tissue_tool$Cell_Line)
+sort_tissue_tool <- sort_tissue_tool %>%
+  filter(Cell_Line %in% common_lines) %>%
+  arrange(factor(Cell_Line, levels = common_lines))
+
+
+# Tidy up the environment.
+rm(list = c("split_cell_line_tissues", "common_lines"))
 
 # Remove a cell line that causes problems: 2313287
-# Remove column from expDat_Sort
-expDat_sort <- expDat_sort[,!colnames(expDat_sort) %in% "2313287"]
-# Have to remove this from other objects
-dasatinib_sort <- dasatinib_sort[dasatinib_sort$CCLE_Name != "2313287",]
-tissuetoolsort <- tissuetoolsort[tissuetoolsort$Cell_Line != "2313287",]
+# Remove column from sort_voom_CCLE
+# sort_voom_CCLE <- sort_voom_CCLE[,!colnames(sort_voom_CCLE) %in% "2313287"]
+# # Have to remove this from other objects
+# sort_dasatinib_GDSC2 <- sort_dasatinib_GDSC2[sort_dasatinib_GDSC2$CCLE_Name != "2313287",]
+# tissuetoolsort <- tissuetoolsort[tissuetoolsort$Cell_Line != "2313287",]
 ```
 
 ## Differential Expression Analysis
@@ -140,23 +189,23 @@ tissuetoolsort <- tissuetoolsort[tissuetoolsort$Cell_Line != "2313287",]
 ### Differential expression analysis for IC50
 ```{r}
 # Prints some basic information about the objects that will be used for further analyses, for reference.
-sum(colnames(expDat_sort)==dasatinib_sort$CCLE_Name)
-names(dasatinib_sort)
+sum(colnames(sort_voom_CCLE)==sort_dasatinib_GDSC2$CCLE_Name)
+names(sort_dasatinib_GDSC2)
 
 # Fits the expression data to a linear model. 
-group <- ifelse(dasatinib_sort$LN_IC50 > median(dasatinib_sort$LN_IC50), "High", "Low")
+group <- ifelse(sort_dasatinib_GDSC2$LN_IC50 > median(sort_dasatinib_GDSC2$LN_IC50), "High", "Low")
 table(group)
-boxplot(dasatinib_sort$LN_IC50 ~ group)
+boxplot(sort_dasatinib_GDSC2$LN_IC50 ~ group)
 design = model.matrix(~group);
 design %>% head()
 colnames(design) = c("Mean", "HighVsLow")
-fit = lmFit(expDat_sort, design)
+fit = lmFit(sort_voom_CCLE, design)
 fit = eBayes(fit)
-tt = topTable(fit, coef="HighVsLow", adjust="BH",n=nrow(expDat_sort))
+tt = topTable(fit, coef="HighVsLow", adjust="BH",n=nrow(sort_voom_CCLE))
 options(digits=4)
 
 # Plots the first gene on the list, and counts the number of significant samples (threshold of 0.01).
-plot(density(expDat_sort[,1]))
+plot(density(sort_voom_CCLE[,1]))
 sum(tt$adj.P.Val<0.05)
 
 # Creates a volcano plot of the IC50 fold change vs. adjusted P value, showing significant samples with high fold change in red.
@@ -177,11 +226,11 @@ invisible(setDT(tt, keep.rownames = TRUE)[])
 
 # Prints a list of the top 50 associated genes (can be altered to create larger lists for pathway analysis). Also creates a histogram and shows the median of IC50 values.
 # cat(na.omit(tt$symbol[1:50]),sep="\n")
-hist(dasatinib_sort$LN_IC50,50)
-median(dasatinib_sort$LN_IC50)
+hist(sort_dasatinib_GDSC2$LN_IC50,50)
+median(sort_dasatinib_GDSC2$LN_IC50)
 
 # Finds the top expression values, visualising the positive correlation between gene expression and IC50.
-topExp <- expDat_sort[match(tt$rn[1], rownames(expDat_sort)),]
+topExp <- sort_voom_CCLE[match(tt$rn[1], rownames(sort_voom_CCLE)),]
 df <- data.frame(topGene=topExp, ic50=group)
 ggplot(df, aes(x=ic50, y=topGene)) + geom_boxplot()
 ```
@@ -189,25 +238,25 @@ ggplot(df, aes(x=ic50, y=topGene)) + geom_boxplot()
 ### Differential expression analysis for AUC
 ```{r}
 # Prints some basic information about the objects that will be used for further analyses, for reference.
-sum(colnames(expDat_sort)==dasatinib_sort$CCLE_Name)
-names(dasatinib_sort)
+sum(colnames(sort_voom_CCLE)==sort_dasatinib_GDSC2$CCLE_Name)
+names(sort_dasatinib_GDSC2)
 
 # Fits the expression data to a linear model.
-group2 <- ifelse(dasatinib_sort$AUC > median(dasatinib_sort$AUC), "High", "Low")
+group2 <- ifelse(sort_dasatinib_GDSC2$AUC > median(sort_dasatinib_GDSC2$AUC), "High", "Low")
 table(group2)
-boxplot(dasatinib_sort$AUC ~ group2)
+boxplot(sort_dasatinib_GDSC2$AUC ~ group2)
 design2 = model.matrix(~group2);
 design2 %>% head()
 colnames(design2) = c("Mean"
-,"HighVsLow"
+                      ,"HighVsLow"
 )
-fit2 = lmFit(expDat_sort, design2)
+fit2 = lmFit(sort_voom_CCLE, design2)
 fit2 = eBayes(fit2)
-tt2 = topTable(fit2, coef="HighVsLow", adjust="BH",n=nrow(expDat_sort))
+tt2 = topTable(fit2, coef="HighVsLow", adjust="BH",n=nrow(sort_voom_CCLE))
 options(digits=4)
 
 # Plots the first gene on the list, and counts the number of significant samples (threshold of 0.05).
-plot(density(expDat_sort[,1]))
+plot(density(sort_voom_CCLE[,1]))
 sum(tt2$adj.P.Val<0.05)
 
 # Creates a volcano plot of the AUC fold change vs. adjusted P value, showing significant samples with high fold change in red.
@@ -229,11 +278,11 @@ tt2[1:20,] %>% kable() %>% kable_styling(bootstrap_options = c("striped", "hover
 
 # Prints a list of the top 50 associated genes (can be altered to create larger lists for pathway analysis). Also creates a histogram and shows the median of AUC values.
 cat(na.omit(tt2$symbol[1:50]),sep="\n")
-hist(dasatinib_sort$AUC,50)
-median(dasatinib_sort$AUC)
+hist(sort_dasatinib_GDSC2$AUC,50)
+median(sort_dasatinib_GDSC2$AUC)
 
 # Finds the top expression values, visualising the negative correlation between gene expression and AUC.
-topExp2 <- expDat_sort[match(tt2$rn[1], rownames(expDat_sort)),]
+topExp2 <- sort_voom_CCLE[match(tt2$rn[1], rownames(sort_voom_CCLE)),]
 df2 <- data.frame(topGene=topExp2, AUC=group)
 ggplot(df2, aes(x=AUC, y=topGene)) + geom_boxplot()
 ```
@@ -291,16 +340,16 @@ SigSamples <-
 # Test using all samples
 TopXGenes <- as.character(na.omit(SigSamples$Gene_Symbol))
 TopXGenesEntrez <- AnnotationDbi::select(hs, 
-                            keys = TopXGenes,
-                            columns = c("ENTREZID", "SYMBOL"),
-                            keytype = "SYMBOL")
+                                         keys = TopXGenes,
+                                         columns = c("ENTREZID", "SYMBOL"),
+                                         keytype = "SYMBOL")
 
 # Adds Entrez ID's to and define non-significant samples.
 tt3Genes <- as.character(na.omit(tt3$Gene_Symbol))
 tt3GenesEntrez <- AnnotationDbi::select(hs, 
-                            keys = tt3Genes,
-                            columns = c("ENTREZID", "SYMBOL"),
-                            keytype = "SYMBOL")
+                                        keys = tt3Genes,
+                                        columns = c("ENTREZID", "SYMBOL"),
+                                        keytype = "SYMBOL")
 
 # Gets pathway names and extracts human-only pathways. Also defines the intersect of the significant genes and those that are in reactome.
 rName <- as.list(reactomePATHNAME2ID)
@@ -386,10 +435,10 @@ write.csv(SiggoseqPathways, file = "Data/goseq_Das_Pathways.csv")
 * Creates objects that add more information to the heatmap. Also prints a legend, showing which cell type is associated with which colour on the heatmap.
 ```{r}
 # Adds more information to "tissuetoolsort". This tells us which group each cell line belongs to in terms of IC50 (High/Low -log IC50) and AUC (High/Low AUC) response, and CDH1 expression level in these cell lines. These are defined as the top/bottom 50% of the data for AUC/-log IC50, and CDH1- Vs. CDH1+, and prints "tissuetoolsort" inline.
-tissuetoolsort$IC50_Group <- ifelse(dasatinib_sort$LN_IC50 > median(dasatinib_sort$LN_IC50), "High", "Low")
-tissuetoolsort$AUC_Group <- ifelse(dasatinib_sort$AUC > median(dasatinib_sort$AUC), "High", "Low")
-tissuetoolsort$CDH1_Group <- ifelse(dasatinib_sort$CDH1 > 2, "High", "Low")
-tissuetoolsort$CDH1_Level <- dasatinib_sort$CDH1
+tissuetoolsort$IC50_Group <- ifelse(sort_dasatinib_GDSC2$LN_IC50 > median(sort_dasatinib_GDSC2$LN_IC50), "High", "Low")
+tissuetoolsort$AUC_Group <- ifelse(sort_dasatinib_GDSC2$AUC > median(sort_dasatinib_GDSC2$AUC), "High", "Low")
+tissuetoolsort$CDH1_Group <- ifelse(sort_dasatinib_GDSC2$CDH1 > 2, "High", "Low")
+tissuetoolsort$CDH1_Level <- sort_dasatinib_GDSC2$CDH1
 tissuetoolsort %>% kable() %>% kable_styling(bootstrap_options = c("striped", "hover", "condensed", font_size=8), fixed_thead=T)
 
 # Creates a color table for the heatmap column bars, which lets us sort by tissue type, AUC, -log IC50, or CDH1.
@@ -399,25 +448,25 @@ cc <- rbind((as.factor(tissuetoolsort$Tissue_Type) %>% as.numeric() %>% rainbow(
             # c("orange", "yellow")[as.numeric(as.factor(tissuetoolsort$CDH1_Group))],
             (as.factor(tissuetoolsort$CDH1_Group) %>% as.numeric() %>% cividis(length(table(.)))[.]),
             (as.factor(tissuetoolsort$CDH1_Level) %>% as.numeric() %>% cividis(length(table(.)), direction= -1)[.])
-            )
+)
 rownames(cc) <- c("Tissue Type", "-log IC50 Group", "AUC Group", "CDH1 Group", "CDH1 Level")
 
 # Creates an object showing which gene is part of which pathway, for all genes and just the significant genes.
 ensginPaths <- lapply(genesinPaths, function(x) GeneLabelTool$ENSEMBL[na.omit(match(x, GeneLabelTool$ENTREZID))] )
 SigensginPaths <- lapply(SiggenesinPaths, function(x) GeneLabelTool$ENSEMBL[na.omit(match(x, GeneLabelTool$ENTREZID))] )
 
-# Standardises names between "expDat" and "GeneLabelTool" for readability and so the code actually works.
-rownames(expDat_sort) <- strsplit(rownames(expDat_sort),".", fixed=T) %>% lapply(., function(x) x[1]) %>% unlist()
+# Standardises names between "voom_CCLE" and "GeneLabelTool" for readability and so the code actually works.
+rownames(sort_voom_CCLE) <- strsplit(rownames(sort_voom_CCLE),".", fixed=T) %>% lapply(., function(x) x[1]) %>% unlist()
 # Save this to be read into the metagene analysis.
-write.csv(expDat_sort, file = "Data/BRCA_STAD_Das_Expression_Data.csv")#, row.names = rownames(expDat_sort))
+write.csv(sort_voom_CCLE, file = "Data/BRCA_STAD_Das_Expression_Data.csv")#, row.names = rownames(sort_voom_CCLE))
 
 # Plots CDH1 expresssion level to identify CDH1- cell lines.
-ggplot(dasatinib_sort, aes(x="", y=CDH1, colour=CDH1 > 2)) +
+ggplot(sort_dasatinib_GDSC2, aes(x="", y=CDH1, colour=CDH1 > 2)) +
   ggtitle("CDH1 Expression Level in Cell Lines") + labs(y="Normalised CDH1 Expression", x="AUC") +
   scale_color_viridis(discrete=TRUE, option="cividis") +
   geom_beeswarm(show.legend = FALSE)
 
-dasatinib_sort$AUC > quantile(dasatinib_sort$AUC, 0.5)
+sort_dasatinib_GDSC2$AUC > quantile(sort_dasatinib_GDSC2$AUC, 0.5)
 ```
 
 # Write out tt3 as a .csv for manipulating into a thesis table
