--- a/1_Differential_Expression_Analysis.qmd
+++ b/1_Differential_Expression_Analysis.qmd
@@ -59,22 +59,28 @@ names(sort_dasatinib_GDSC2)
 
 ### Differential expression analysis
 ```{r}
-# Create groups for comparison
-group <- ifelse(sort_dasatinib_GDSC2$AUC > median(sort_dasatinib_GDSC2$AUC), "High", "Low")
+# Create groups for comparison, based on drug response to dasatinib
+group <- cut(
+  sort_dasatinib_GDSC2$LN_IC50,
+  breaks = quantile(sort_dasatinib_GDSC2$LN_IC50, probs = c(0, 1/3, 2/3, 1), na.rm = TRUE),
+  labels = c("Bottom", "Middle", "Top"),
+  include.lowest = TRUE
+)
+
 # How many cell lines are in each group?
 table(group)
-# Visualize the ranges of AUC values in each group.
-ggplot(sort_dasatinib_GDSC2, aes(x = group, y = AUC)) +
+# Visualize the ranges of drug response values in each group.
+ggplot(sort_dasatinib_GDSC2, aes(x = group, y = LN_IC50)) +
   geom_boxplot() +
-  labs(title = "AUC Distribution by Group",
-       x = "Group", y = "AUC") +
+  labs(title = "IC50 Distribution by Group",
+       x = "Group", y = "IC50") +
   theme_minimal()
 # Create the design matrix.
-design <- model.matrix(~group); colnames(design) <- c("Mean", "HighVsLow")
+design <- model.matrix(~group); colnames(design) <- c("Mean", "BottomVsMiddle", "BottomVsTop")
 # Fit the linear model.
 fit <- lmFit(sort_voom_CCLE, design) %>% eBayes(.)
 # Create the top table of DE genes, and ensure that it's sorted by adjusted p-value.
-top_table <- topTable(fit, coef = "HighVsLow", adjust = "BH", n = nrow(sort_voom_CCLE)) %>%
+top_table <- topTable(fit, coef = "BottomVsTop", adjust = "BH", n = nrow(sort_voom_CCLE)) %>%
   arrange(adj.P.Val)
 
 # Tidy up the environment.
@@ -115,6 +121,6 @@ saveRDS(top_table, file = "1_output/top_table.rds")
 
 ### Tidy up the environment and R memory
 ```{r}
-# rm(list = ls())
-# gc()
+rm(list = ls())
+gc()
 ```
