IC50 based differential expression analysis using all 63 gastric and breast cell lines to calculate drug associations, not only those with dasatinib data

--- a/1_Differential_Expression_Analysis.qmd
+++ b/1_Differential_Expression_Analysis.qmd
@@ -115,6 +115,8 @@ rm(list = c("adj_p_thresh"))
 
 ### Save processed objects as .rds files
 ```{r}
+# Remove unneeded columns
+top_table <- top_table %>% dplyr::select(-logAdjP, -highlight)
 # top_table
 saveRDS(top_table, file = "1_output/top_table.rds")
 ```
