--- a/0_Setup.qmd
+++ b/0_Setup.qmd
@@ -53,6 +53,8 @@ CCLE <- read.gct("data/raw/CCLE_RNAseq_genes_counts_20180929.gct")
 colnames(CCLE) <- sub("^X(\\d+)", "\\1", colnames(CCLE))
 # Convert gene names to stable Ensembl IDs by removing version numbers.
 rownames(CCLE) <- sub("\\..*", "", rownames(CCLE))
+# Ensure that cell line names are all uppercase for consistency.
+colnames(CCLE) <- toupper(colnames(CCLE))
 # Normalise CCLE counts using the limma voom method.
 dge <- DGEList(counts = CCLE)
 dge <- calcNormFactors(dge)
@@ -72,6 +74,9 @@ GDSC2 <- fread("data/raw/GDSC2_fitted_dose_response_25Feb20.csv", sep= ';')
 # Load the GDSC dataset, current release available here: www.cancerrxgene.org/downloads/bulk_download
 # Archived releases available via ftp: ftp.sanger.ac.uk/project/cancerrxgene/releases/
 # GDSC2 <- read.xlsx("data/raw/GDSC2_fitted_dose_response_27Oct23.xlsx")
+
+# Convert column names to uppercase for consistency with CCLE.
+GDSC2$CELL_LINE_NAME <- toupper(GDSC2$CELL_LINE_NAME)
 ```
 
 ### Format data
@@ -104,6 +109,21 @@ colnames(common_dasatinib_GDSC2)[5] <- "CCLE_Name"
 
 # Tidy up the environment.
 rm(list = c("common_lines", "match_voom_CCLE", "match_dasatinib_GDSC2"))
+```
+
+
+### Inspect GDSC2 data to extract total number of breast and gastric cancer cell lines
+```{r}
+unique_GDSC2 <- GDSC2 %>%
+  dplyr::select(TCGA_DESC, CELL_LINE_NAME) %>%      # Keep only the desired columns
+  distinct(CELL_LINE_NAME, .keep_all = TRUE) # Keep only the first row for each unique cell line
+
+# Extract cell lines in the GDSC2 data that are BRCA or STAD according to TCGA classification.
+TOI_GDSC2 <- unique_GDSC2 %>%
+  dplyr::filter(TCGA_DESC %in% c("BRCA", "STAD"))
+
+# Tidy up the environment.
+rm(list = c("unique_GDSC2"))
 ```
 
 ### Filter data
@@ -142,16 +162,22 @@ tissue_tool <- tissue_tool %>% mutate(
     str_remove_all("c") %>%
     str_replace_all("[[:punct:]]", "_"))
 
-# Create another tool for the same purpose, but only including cell lines of interest.
-sort_tissue_tool <- tissue_tool %>% filter(Tissue_Type %in% c("BREAST", "STOMACH"))
-common_lines <- intersect(colnames(sort_voom_CCLE), sort_tissue_tool$Cell_Line)
-sort_tissue_tool <- sort_tissue_tool %>%
+# Create another tool for the same purpose, including breast and stomach cell lines regardless of dasatinib response data.
+TOI_tissue_tool <- tissue_tool %>% filter(Tissue_Type %in% c("BREAST", "STOMACH")) # Data from CCLE.
+common_lines <- intersect(TOI_GDSC2$CELL_LINE_NAME, TOI_tissue_tool$Cell_Line) # Data from GDSC2.
+TOI_tissue_tool <- TOI_tissue_tool %>% # Overlap between the two.
   filter(Cell_Line %in% common_lines) %>%
   arrange(factor(Cell_Line, levels = common_lines))
 
+# Create another tool for the same purpose, but only including breast and stomach cell lines with dasatinib response data.
+sort_tissue_tool <- tissue_tool %>% filter(Tissue_Type %in% c("BREAST", "STOMACH")) # Data from CCLE.
+common_lines <- intersect(colnames(sort_voom_CCLE), sort_tissue_tool$Cell_Line) # Data from GDSC2 with dasatinib data.
+sort_tissue_tool <- sort_tissue_tool %>% # Overlap between the two.
+  filter(Cell_Line %in% common_lines) %>%
+  arrange(factor(Cell_Line, levels = common_lines))
 
 # Tidy up the environment.
-rm(list = c("split_cell_line_tissues", "common_lines"))
+rm(list = c("split_cell_line_tissues", "common_lines", "TOI_GDSC2"))
 ```
 
 ### Index alternative names for all genes in the dataset.
@@ -183,6 +209,9 @@ saveRDS(sort_voom_CCLE, file = "data/sort_voom_CCLE.rds")
 
 # tissue_tool
 saveRDS(tissue_tool, file = "data/tissue_tool.rds")
+
+# TOI_tissue_tool
+saveRDS(TOI_tissue_tool, file = "data/TOI_tissue_tool.rds")
 
 # sort_tissue_tool
 saveRDS(sort_tissue_tool, file = "data/sort_tissue_tool.rds")
